Removed test-scheduler endpoint
